Clientes Invoices Usuários Login

--- a/module/application/view/layout/layout.phtml
+++ b/module/application/view/layout/layout.phtml
@@ -12,13 +12,18 @@
         <!-- styles -->
         <?php echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.ico'))
                         ->prependStylesheet($this->basePath() . '/css/style.css')
+                        ->prependStylesheet($this->basePath() . '/css/autocomplete.css')
                         ->prependStylesheet($this->basePath() . '/css/bootstrap.min.css')
                         ; ?>
         <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 
           <?php echo $this->headScript()
+            ->prependFile($this->basePath() . '/js/maskMoney.js')
+            ->prependFile($this->basePath() . '/js/jquery.maskedinput.min.js')
             ->prependFile($this->basePath() . '/js/funcoes.js')
+            ->prependFile($this->basePath() . '/js/bootbox.min.js')
             ->prependFile($this->basePath() . '/js/bootstrap.min.js')
+            ->prependFile($this->basePath() . '/js/jquery.autocomplete.js')
             ->prependFile($this->basePath() . '/js/jquery.min.js'); ?>
 
   </head>
@@ -38,10 +43,21 @@
       <!-- sidebar-search  -->
       <div class="sidebar-menu">
         <a href="<?= $this->url('indexCliente'); ?>">
-          <img src="<?= $this->basePath('empresas/1/logo.png'); ?>" class="rounded mx-auto d-block" alt="Responsive image">
+          <img src="<?= $this->basePath($clienteSelecionado['logo']); ?>" class="rounded mx-auto d-block" alt="Responsive image">
         </a>
         <ul>
-
+          <li>
+            <a href="<?= $this->url('visualizarDashboard'); ?>">
+              <i class="fa fa-book"></i>
+              <span>Dashboard 01</span>
+            </a>
+          </li>
+          <li>
+            <a href="<?= $this->url('visualizarDashboard'); ?>">
+              <i class="fa fa-book"></i>
+              <span>Dashboard 02</span>
+            </a>
+          </li>
           <li class="sidebar-dropdown">
             <a href="#">
               <i class="fa fa-tachometer-alt"></i>
@@ -50,18 +66,17 @@
             <div class="sidebar-submenu">
               <ul>
                 <li>
-                  <a href="#">Dashboard 1</a>
+                  <a href="<?= $this->url('visualizarDashboard'); ?>"><img src="<?= $this->basePath('img/visualizar.png'); ?>"> Dashboard 1</a>
                 </li>
                 <li>
-                  <a href="#">Dashboard 2</a>
+                  <a href="<?= $this->url('visualizarDashboard'); ?>"><img src="<?= $this->basePath('img/visualizar.png'); ?>">  Dashboard 2</a>
                 </li>
                 <li>
-                  <a href="#">Dashboard 3</a>
+                  <a href="<?= $this->url('visualizarDashboard'); ?>"><img src="<?= $this->basePath('img/visualizar.png'); ?>">  Dashboard 3</a>
                 </li>
               </ul>
             </div>
           </li>
-
           <li class="sidebar-dropdown">
             <a href="#">
               <i class="fa fa-tachometer-alt"></i>
@@ -70,13 +85,13 @@
             <div class="sidebar-submenu">
               <ul>
                 <li>
-                  <a href="#">Dashboard 1</a>
+                  <a href="<?= $this->url('visualizarDashboard'); ?>"><img src="<?= $this->basePath('img/visualizar.png'); ?>">  Dashboard 1</a>
                 </li>
                 <li>
-                  <a href="#">Dashboard 2</a>
+                  <a href="<?= $this->url('visualizarDashboard'); ?>"><img src="<?= $this->basePath('img/visualizar.png'); ?>">  Dashboard 2</a>
                 </li>
                 <li>
-                  <a href="#">Dashboard 3</a>
+                  <a href="<?= $this->url('visualizarDashboard'); ?>"><img src="<?= $this->basePath('img/visualizar.png'); ?>">  Dashboard 3</a>
                 </li>
               </ul>
             </div>
@@ -90,7 +105,7 @@
             <div class="sidebar-submenu">
               <ul>
                 <li>
-                  <a href="<?= $this->url('indexMenu') ?>">Itens do menu</a>
+                  <a href="<?= $this->url('indexMenu') ?>">Categorias de dashboard</a>
                 </li>
                 <li>
                   <a href="<?= $this->url('indexCliente'); ?>">Clientes</a>
@@ -102,7 +117,7 @@
                   <a href="<?= $this->url('indexInvoice') ?>">Invoices</a>
                 </li>
                 <li>
-                  <a href="#">Usuários</a>
+                  <a href="<?= $this->url('usuario'); ?>">Usuários</a>
                 </li>
               </ul>
             </div>
@@ -113,6 +128,12 @@
               <span>Ajuda</span>
             </a>
           </li>
+          <li>
+            <a href="<?= $this->url('logout'); ?>">
+              <i class="fa fa-book"></i>
+              <span>Sair</span>
+            </a>
+          </li>
         </ul>
       </div>
       <!-- sidebar-menu  -->
@@ -120,6 +141,14 @@
   </nav>
   <!-- sidebar-wrapper  -->
   <main class="page-content">
+      <div class="container theme-showcase" role="main" id="alertasLayout" style="margin-top:100px;padding: 0px;">
+        <?= $this->flashMessenger()->render('error', array('alert', 'alert-danger')) ?>   
+
+        <?= $this->flashMessenger()->render('warning', array('alert',  'alert-warning')) ?>
+        
+        <?= $this->flashMessenger()->render('success', array('alert',  'alert-success')) ?>
+      </div>
+
       <?php echo $this->content; ?>
   </main>
   <!-- page-content" -->
