--- a/module/application/view/application/index/indexmenu.phtml
+++ b/module/application/view/application/index/indexmenu.phtml
@@ -8,7 +8,7 @@
     <div class="row">
       <div class="panel panel-primary" style="width: 100%">
         <div class="panel-heading">
-          <h3 class="panel-title">Menus</h3>
+          <h3 class="panel-title">Categorias de dashboard</h3>
         </div>
         <div class="panel-body">
           <?php if($menus->count() > 0): ?>
