--- a/module/usuario/view/layout/layoutlogin.phtml
+++ b/module/usuario/view/layout/layoutlogin.phtml
@@ -18,19 +18,16 @@
                         'href' => $this->basePath() . '/img/favicon.ico'
                         )
                     )
-                    ->prependStylesheet($this->basePath() . '/css/signin.css') 
                     ->prependStylesheet($this->basePath() . '/css/bootstrap.min.css');
         ?>
 
         <!-- Scripts -->
-        <?php 
-        $this->headScript()->setAllowArbitraryAttributes(true);
-        echo $this->headScript()
-            ->prependFile($this->basePath() . '/js/bootstrap.min.js', 'text/javascript', array('async' => 'true'))
-            ->prependFile($this->basePath() . '/js/jquery.min.js', 'text/javascript', array('async' => 'true'))
-            ->prependFile($this->basePath() . '/js/respond.min.js', 'text/javascript', array('conditional' => 'lt IE 9', 'async' => 'true'))
-            ->prependFile($this->basePath() . '/js/html5shiv.js',   'text/javascript', array('conditional' => 'lt IE 9', 'async' => 'true'))
-        ; ?>
+        <?php echo $this->headScript()
+            ->prependFile($this->basePath() . '/js/funcoes.js')
+            ->prependFile($this->basePath() . '/js/jquery.maskedinput.min.js')
+            ->prependFile($this->basePath() . '/js/bootstrap.min.js')
+            ->prependFile($this->basePath() . '/js/jquery.min.js'); ?>
+            
         <script src='https://www.google.com/recaptcha/api.js'></script>
     </head>
   <body>
