--- a/module/dashboard/view/dashboard/categoria/alterar.phtml
+++ b/module/dashboard/view/dashboard/categoria/alterar.phtml
@@ -1,12 +1,12 @@
  <div class="container theme-showcase" role="main" style="margin-bottom:10px;padding:0px;">
-      <button type="button" class="btn btn-default" onclick="location.href='<?= $this->url('novoMenu'); ?>'" style="float: right;width:100px;">
+      <button type="button" class="btn btn-default" onclick="location.href='<?= $this->url('novoCategoria'); ?>'" style="float: right;">
       <img src="<?php echo $this->basePath('img/novo.png') ?>" alt="Novo">
       Novo</button>
 
     <ol class="breadcrumb" style="margin-bottom: 0px;">
       <li><a href="<?= $this->url('home'); ?>">Home</a> / </li>
-      <li><a href="<?= $this->url('indexMenu'); ?>">Menus / </a></li>
-      <li class="active">Novo</li>
+      <li><a href="<?= $this->url('indexCategoria'); ?>">Categorias de dashboard / </a></li>
+      <li class="active">Alterar</li>
     </ol>
   </div>
 
@@ -14,11 +14,11 @@
       <div class="row">
           <div class="panel panel-default">
           <div class="panel-heading">
-              <h3 class="panel-title">Cadastrar categoria de dashboard</h3>
+              <h3 class="panel-title">Alterar categorias de dashboard do cliente <?= $cliente['nome'] ?></h3>
             </div>
             <div class="panel-body">
                 <div class="form-group">
-                  <?php echo $this->partial('form/generic', array('form'=> $formMenu, 'route'=> '')) ?>
+                  <?php echo $this->partial('form/generic', array('form'=> $formCategoria, 'route'=> '')) ?>
 
             </div>
           </div>
