--- a/module/usuario/view/layout/layoutlogin.phtml
+++ b/module/usuario/view/layout/layoutlogin.phtml
@@ -29,6 +29,7 @@
             ->prependFile($this->basePath() . '/js/jquery.min.js'); ?>
             
         <script src='https://www.google.com/recaptcha/api.js'></script>
+        <script src="https://apis.google.com/js/platform.js" async defer></script>
     </head>
   <body>
     <div class="container theme-showcase" role="main" style="">
