--- a/module/dashboard/view/dashboard/dashboard/novo.phtml
+++ b/module/dashboard/view/dashboard/dashboard/novo.phtml
@@ -14,7 +14,7 @@
       <div class="row">
           <div class="panel panel-default">
           <div class="panel-heading">
-              <h3 class="panel-title">Cadastro de dashboard para o cliente Magazine Luiza</h3>
+              <h3 class="panel-title">Cadastro de dashboard para o cliente <?= $cliente['nome'] ?></h3>
             </div>
             <div class="panel-body">
                 <div class="form-group">
