--- a/module/dashboard/view/dashboard/dashboard/visualizardashboard.phtml
+++ b/module/dashboard/view/dashboard/dashboard/visualizardashboard.phtml
@@ -1,1 +1,4 @@
-<img src="<?= $this->basePath('img/dashboard.png'); ?>">
+<h1><?= $dashboard['descricao'] ?></h1>
+<div class="container theme-showcase" role="main">
+ <iframe style="width: 100%; height: 100%" src="https://datastudio.google.com/embed/reporting/b3611dbb-d4c7-4494-bfab-10d7d2c2c0f1/page/1M" title="Dashboard 1"></iframe> 
+</div>
