--- a/module/usuario/view/usuario/usuario/login.phtml
+++ b/module/usuario/view/usuario/usuario/login.phtml
@@ -21,8 +21,16 @@
 			
 			<hr class="colorgraph">
 			<div class="row">
-				<div class="col-xs-12 col-md-6"><input type="submit" value="Logar-se" class="btn btn-primary btn-lg pull-right"></div>
+				<div class="col-md-6">
+          <input type="submit" value="Logar-se" class="btn btn-primary btn-lg pull-right">
+        </div>
+
+        <div class="col-md-6">
+          <input type="button" value="Recuperar senha" onclick="location.href='<?= $this->url('recuperarSenha'); ?>'" class="btn btn-primary btn-lg pull-right">
+        </div>
 			</div>
+
+      
 		</form>
 	</div>
 </div>
